@@ -16,11 +16,11 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#ifndef _ASM_BYTEORDER_H_
-#define _ASM_BYTEORDER_H_
+#ifndef _ASM_X86_BYTEORDER_H_
+#define _ASM_X86_BYTEORDER_H_
 
 /*TODO*/
 
 #include <sandix/byteorder/little_endian.h>
 
-#endif
+#endif /* _ASM_X86_BYTEORDER_H_ */
