@@ -19,7 +19,7 @@
 #ifndef _SANDIX_KERNEL_H_
 #define _SANDIX_KERNEL_H_
 
-#include <sandix/bug.h>
+#include <stdarg.h>
 #include <sandix/types.h>
 #include <sandix/export.h>
 #include <sandix/printk.h>
@@ -28,23 +28,38 @@
 #include <sandix/compiler.h>
 #include <sandix/typecheck.h>
 
-#include <stdarg.h>
+#define USHRT_MAX		((u16)(~0U))
+#define SHRT_MAX		((s16)(USHRT_MAX>>1))
+#define SHRT_MIN		((s16)(-SHRT_MAX - 1))
+#define INT_MAX			((int)(~0U>>1))
+#define INT_MIN			(-INT_MAX - 1)
+#define UINT_MAX		(~0U)
+#define LONG_MAX		((long)(~0UL>>1))
+#define LONG_MIN		(-LONG_MAX - 1)
+#define ULONG_MAX		(~0UL)
+#define LLONG_MAX		((long long)(~0ULL>>1))
+#define LLONG_MIN		(-LLONG_MAX - 1)
+#define ULLONG_MAX		(~0ULL)
+#define SIZE_MAX		(~(size_t)0)
 
-#define USHRT_MAX	((u16)(~0U))
-#define SHRT_MAX	((s16)(USHRT_MAX>>1))
-#define SHRT_MIN	((s16)(-SHRT_MAX - 1))
-#define INT_MAX		((int)(~0U>>1))
-#define INT_MIN		(-INT_MAX - 1)
-#define UINT_MAX	(~0U)
-#define LONG_MAX	((long)(~0UL>>1))
-#define LONG_MIN	(-LONG_MAX - 1)
-#define ULONG_MAX	(~0UL)
-#define LLONG_MAX	((long long)(~0ULL>>1))
-#define LLONG_MIN	(-LLONG_MAX - 1)
-#define ULLONG_MAX	(~0ULL)
-#define SIZE_MAX	(~(size_t)0)
+#define U8_MAX			((u8)~0U)
+#define S8_MAX			((s8)(U8_MAX>>1))
+#define S8_MIN			((s8)(-S8_MAX - 1))
+#define U16_MAX			((u16)~0U)
+#define S16_MAX			((s16)(U16_MAX>>1))
+#define S16_MIN			((s16)(-S16_MAX - 1))
+#define U32_MAX			((u32)~0U)
+#define S32_MAX			((s32)(U32_MAX>>1))
+#define S32_MIN			((s32)(-S32_MAX - 1))
+#define U64_MAX			((u64)~0ULL)
+#define S64_MAX			((s64)(U64_MAX>>1))
+#define S64_MIN			((s64)(-S64_MAX - 1))
 
-#define ARRAY_SIZE(x)	(sizeof(x) / sizeof((x)[0]))
+#define STACK_MAGIC		0xdeadbeef
+
+#define DIV_ROUND_UP(n,d)	(((n) + (d) - 1) / (d))
+
+#define ARRAY_SIZE(x)		(sizeof(x) / sizeof((x)[0]))
 
 /**
  * container_of - find which structure this @ptr located
@@ -52,7 +67,8 @@
  * @type:	the type of the container struct this is embedded in.
  * @member:	the name of the member within the struct.
  */
-#define container_of(ptr, type, member) ({			\
+#define container_of(ptr, type, member)				\
+({								\
 	typeof( ((type *)0)->member ) *__ptr = (ptr);		\
 	(type *)( (char *)__ptr - offsetof(type,member) );	\
 })
