@@ -489,3 +489,11 @@ Wed Feb 17 09:19:12 CST 2016
 - [M] arch/x86/include/asm/ptrace.h
 - [M] arch/x86/include/process.c
 - [M] include/sandix/sched.h			[D] extern trap_init() here...
+
+
+Thu Feb 18 09:40:21 CST 2016
+- [+] include/sandix/bitmaps.h
+- [M] include/sandix/types.h			[D] bitmaps
+- [M] include/sandix/bitops.h
+- [M] arch/x86/include/asm/bitops.h
+- [M] include/sandix/kernel.h			[D] roundup things
